--- a/QuakeReport/app/src/main/AndroidManifest.xml
+++ b/QuakeReport/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="com.example.ahmedelbasha.quakereport">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <activity android:name=".EarthquakeActivity">
             <intent-filter>
